--- a/TAC_COM/Views/MainWindow.xaml
+++ b/TAC_COM/Views/MainWindow.xaml
@@ -34,7 +34,8 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Column="2" Grid.Row="4"
-                    HorizontalAlignment="Right" VerticalAlignment="Top">
+                    HorizontalAlignment="Right" VerticalAlignment="Top"
+                    Focusable="False">
             <Button Content="{Binding CurrentIcon}"
                     Command="{Binding ToggleSettingsView}"
                     Height="24" Width="24"
@@ -67,7 +68,8 @@
 
         <ContentControl Content="{Binding CurrentViewModel}"
                         Grid.Column="2" Grid.Row="4"
-                        Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"/>
+                        Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
+                        Focusable="False"/>
         
     </Grid>
 
